# glad_3.1

./: .gitignore  CMakeLists.txt  ThomasBS.txt  glad.c  glad.def  glad.h  glad.vcxproj  glad.vcxproj.filters  glad_egl.c  glad_wgl.c
glad.xcodeproj/: project.pbxproj
include/: glad.h  glad_egl.h  glad_wgl.h  khrplatform.h
include/glad/: glad.h  glad_egl.h
src/: glad.c  glad_egl.c
